# BuildForge

./: README.md  metadata.json  package-lock.json  package.json  server.ts
buildforge/: CMakeLists.txt
buildforge/docs/: design-decisions.md
buildforge/proto/: buildforge.proto
buildforge/src/: main.cpp
buildforge/src/artifact_store/: artifact_store.cpp  artifact_store.hpp
buildforge/src/cache/: build_cache.cpp  build_cache.hpp
buildforge/src/common/: result.hpp
buildforge/src/graph/: dependency_graph.hpp
buildforge/src/networking/: grpc_retry.hpp
buildforge/src/parser/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
buildforge/src/scheduler/: work_stealing.cpp  work_stealing.hpp
src/: App.tsx  index.css  types.ts
src/components/: ArchitectureExplorer.tsx  BuildComparison.tsx  BuildReplay.tsx  BuildTimeline.tsx  CacheAnalytics.tsx  DistributedTrace.tsx  FaultInjection.tsx  InteractiveDAG.tsx  PerformanceBenchmarks.tsx  WorkerCluster.tsx
src/db/: index.ts  init.ts
src/lib/: executor.ts  parser.ts
workspace/: hash.cpp  utils.cpp
